<resources>
    <string name="app_name">Агрегатор мероприятий</string>
    <string name="description_image_of_event">image of event</string>
    <string name="price">Цена:</string>
    <string name="way_to_go">Формат проведения:</string>
    <string name="city">Город:</string>
    <string name="description">Описание события:</string>
    <string name="time">Время проведения:</string>
    <string name="phone">Телефонный номер:</string>
    <string name="place_title">Место:</string>
    <string name="place_address">Адрес:</string>
    <string name="search_field_hint">Введите запрос</string>
    <string name="exit_search_descriptor">Вернуться к ленте событий</string>
    <string name="start_search_descriptor">Начать поиск</string>
    <string name="notification_button">Включить уведомление</string>
    <string name="feed_navigation_menu">Лента</string>
    <string name="liked_navigation_menu">Избранное</string>
    <string name="settings_navigation_menu">Настройки</string>
    <string name="share_event">Поделиться</string>
    <string name="add_to_calendar">Добавить в календарь</string>
    <string name="open_in_browser">Открыть в браузере</string>
    <string name="error_find">События не найдены!</string>
    <string name="search_toast_empty_field">Минимальная длина запроса: 2</string>
    <string name="set_filter">Установить фильтры</string>
    <string name="dark_theme">Темная тема</string>
    <string name="language">Язык</string>
    <string name="switch_language">Смена языка</string>
    <string name="theme">Тема</string>
    <string name="Russian">Русский</string>
    <string name="English">Английский</string>
    <string name="dark">Темная</string>
    <string name="light">Светлая</string>
    <string name="location">Местоположение</string>
    <string name="choosing_city">Выбор города</string>
    <string name="moscow">Москва</string>
    <string name="spb">Санкт-Петербург</string>
    <string name="ekb">Екатеринбург</string>
    <string name="krs">Красноярск</string>
    <string name="krd">Краснодар</string>
    <string name="kzn">Казань</string>
    <string name="nnv">Нижний Новгород</string>
    <string name="nsk">Новосибирск</string>
    <string name="sochi">Сочи</string>
    <string name="notify">Уведомления</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="choosing_time">Время напоминания</string>
    <string name="hours">часы</string>
    <string name="minutes">минуты</string>
    <string name="any">Любой</string>
    <string name="added">Событие сохранено</string>
    <string name="preference_theme_key" translatable="false">dark_theme</string>
    <string name="preference_city_key" translatable="false">city_list</string>
    <string name="preference_filter" translatable="false">preference_filter</string>
    <string name="pref_feed_file" translatable="false">FeedPref</string>
    <string name="notification_text_first_part">"У вас запланировано событие "</string>
    <string name="notification_text_second_part">" в "</string>
    <string name="empty_feed">Лента пуста</string>
    <string name="online_events">Онлайн события</string>
    <string name="only_online">Только онлайн события</string>
    <string name="all_events">Все события</string>
    <string name="chip_all">Всё</string>
    <string name="chip_concerts">Концерты</string>
    <string name="chip_exhibitions">Выставки</string>
    <string name="chip_education">Образование</string>
    <string name="chip_kids">Дети</string>
    <string name="chip_theater">Театр</string>
    <string name="chip_festivals">Фестивали</string>
    <string name="chip_pastime">Отдых</string>
    <string name="network_error">Нет соеинения с интернетом</string>
    <string name="database_error">Ошибка в БД</string>
    <string name="error_description">Ошибка в получении события</string>
    <string name="refresh">Обновить</string>
    <string name="text_open_map">Показать на карте</string>
    <string name="error_while_show_map">Невозможно показать на карте</string>
</resources>
