<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="language"
        app:title="@string/language">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="switch_language"
            android:summary="turn this"
            android:title="@string/switch_language"
            android:summaryOff="@string/Russian"
            android:summaryOn="@string/English"
            />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="theme"
        app:title="@string/theme">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="dark_theme"
            android:summary="turn this"
            android:title="@string/dark_theme"
            android:summaryOff="@string/light"
            android:summaryOn="@string/dark"
            />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="city"
        app:title="@string/location">
        <SwitchPreferenceCompat
            app:key = "enable_online"
            app:title = "@string/online_events"
            android:summaryOff="@string/only_online"
            android:summaryOn="@string/all_events"/>

        <ListPreference
            android:title="@string/choosing_city"
            android:key="@string/preference_city_key"
            android:defaultValue="msk"
            android:dependency="enable_online"
            android:entries="@array/listCities"
            android:entryValues="@array/listValues" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/notify"
        app:title="@string/notify">
        <ru.techpark.agregator.fragments.TimePreference
            android:key="time_picked"
            android:title="@string/choosing_time">
        </ru.techpark.agregator.fragments.TimePreference>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>