<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedFragment">

    <ImageButton
        android:id="@+id/exit_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_exit_search_button"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/exit_search_descriptor" />

    <EditText
        android:id="@+id/search_query"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="5dp"
        android:gravity="center_horizontal"
        android:hint="@string/search_field_hint"
        android:layout_toEndOf="@+id/exit_search"
        android:layout_toStartOf="@+id/start_search"
        android:layout_alignBottom="@+id/start_search"
        android:importantForAutofill="no"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/start_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:srcCompat="@drawable/ic_search_button"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/start_search_descriptor" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="70dp"
        android:layout_below="@+id/search_query" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>