<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="200dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                android:layout_height="56dp"/>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.MyTheme.ActionBar" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Headline6"
                        tools:text="title" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginVertical="8dp"
                        android:text="@string/time"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2" />

                    <TextView
                        android:id="@+id/date_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@+id/label_date"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="date_start" />

                    <TextView
                        android:id="@+id/time_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@+id/date_start"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="time_start" />

                    <TextView
                        android:id="@+id/location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label_date"
                        android:layout_marginVertical="8dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                        tools:text="location_label" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/label_date"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@id/location_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="location" />

                    <TextView
                        android:id="@+id/place_title_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/location_label"
                        android:layout_alignParentStart="true"
                        android:layout_marginVertical="8dp"
                        android:text="@string/place_title"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                        tools:text="Место:" />

                    <TextView
                        android:id="@+id/place_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/location_label"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@id/place_title_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="place_title" />

                    <TextView
                        android:id="@+id/place_address_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_title_label"
                        android:layout_marginVertical="8dp"
                        android:text="@string/place_address"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                        tools:text="Адрес:" />

                    <TextView
                        android:id="@+id/place_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_title_label"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@id/place_address_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="place_address" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_address_label"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@+id/phone_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="phone" />

                    <TextView
                        android:id="@+id/phone_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/place_address_label"
                        android:layout_alignParentStart="true"
                        android:layout_marginVertical="8dp"
                        android:text="@string/phone"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                        tools:text="Телефон: " />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phone"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@+id/price_label"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="price" />

                    <TextView
                        android:id="@+id/price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phone"
                        android:layout_alignParentStart="true"
                        android:layout_marginVertical="8dp"
                        android:text="@string/price"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2"
                        tools:text="Цена" />

                    <Button
                        android:id="@+id/btn_open_map"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/price"
                        android:layout_centerHorizontal="true"
                        android:text="@string/text_open_map"
                        android:visibility="gone"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/description"
                        android:textAppearance="@style/TextAppearance.MyTheme.Subtitle2" />

                    <TextView
                        android:id="@+id/body_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
                        tools:text="body_text" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/error_description"
            android:src="@drawable/ic_network_error" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/refresh" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/likeUnlike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/baseline_favorite_black_18dp" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>