<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".fragments.FeedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/ThemeOverlay.MyTheme.ActionBar"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/exit_search"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/exit_search_descriptor"
                app:srcCompat="@drawable/ic_exit_search_button" />

            <EditText
                android:id="@+id/search_query"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/start_search"
                android:layout_toEndOf="@+id/exit_search"
                android:hint="@string/search_field_hint"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/start_search"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:contentDescription="@string/start_search_descriptor"
                app:srcCompat="@drawable/ic_search_button" />

            <ImageButton
                android:id="@+id/filters_button"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/start_search"
                android:contentDescription="@string/set_filter"
                app:srcCompat="@drawable/ic_filters_button" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/chips_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toggle_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_events"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_below="@+id/chips_layout"
        android:paddingBottom="70dp" />

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

</RelativeLayout>